default/objects/E2E_Promocodes__c/E2E_Promocodes__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>list of promocedes</description>
    <label>E2E Promocodes</label>
</CustomObject>