default/objects/E2E_Promocodes__c/fields/Apply_to_tariffs__c.field-meta.xml
<CustomField>
    <fullName>Apply_to_tariffs__c</fullName>
    <label>Apply to tariffs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>