default/objects/E2E_Promocodes__c/fields/Enable_Additional_Promo__c.field-meta.xml
<CustomField>
    <fullName>Enable_Additional_Promo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Additional Promo</label>
    <type>Checkbox</type>
</CustomField>