default/objects/E2E_Promocodes__c/fields/Enable_Main_Promo__c.field-meta.xml
<CustomField>
    <fullName>Enable_Main_Promo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Main Promo</label>
    <type>Checkbox</type>
</CustomField>