default/objects/E2E_Promocodes__c/fields/Promocode_Additional_Field__c.field-meta.xml
<CustomField>
    <fullName>Promocode_Additional_Field__c</fullName>
    <label>Promocode Additional Field</label>
    <type>TextArea</type>
</CustomField>