default/objects/E2E_Promocodes__c/fields/Promocode_Classic_Label__c.field-meta.xml
<CustomField>
    <fullName>Promocode_Classic_Label__c</fullName>
    <label>Promocode Classic Label</label>
    <type>TextArea</type>
</CustomField>