default/objects/E2E_Promocodes__c/fields/Promocode_Description_Body__c.field-meta.xml
<CustomField>
    <fullName>Promocode_Description_Body__c</fullName>
    <label>Promocode Description Body</label>
    <type>TextArea</type>
</CustomField>