default/objects/E2E_Promocodes__c/fields/Promocode_Description_Title__c.field-meta.xml
<CustomField>
    <fullName>Promocode_Description_Title__c</fullName>
    <label>Promocode Description Title</label>
    <type>TextArea</type>
</CustomField>