default/objects/E2E_Promocodes__c/fields/Promocode_Label__c.field-meta.xml
<CustomField>
    <fullName>Promocode_Label__c</fullName>
    <label>Promocode Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>