default/objects/E2E_Promocodes__c/fields/Report_Identifiers__c.field-meta.xml
<CustomField>
    <fullName>Report_Identifiers__c</fullName>
    <label>Report Identifiers</label>
    <type>TextArea</type>
</CustomField>