default/objects/E2E_Promocodes__c/fields/Supplier_Selection__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Selection__c</fullName>
    <description>True or False</description>
    <label>Supplier Selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>